--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
             <a href="mailto:name@email.com">name@email.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-3">My name is Owen Dybvig and I am 16 years old. I have cerebral palsy, that means I have a wheelchair and communication device. Even though I have cerebral palsy I am a strong communicator sharing my experience and speaking at the international society of augmentative and alternative communication conference in Toronto, Canada. </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
