--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Owen Boss
             <span class="text-primary">Dybvig</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+          <div class="subheading mb-5">3542 Boss Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
             <a href="mailto:name@email.com">name@email.com</a>
           </div>
           <p class="mb-3">My name is Owen Dybvig and I am 16 years old. I have cerebral palsy, that means I have a wheelchair and communication device. Even though I have cerebral palsy I am a strong communicator sharing my experience and speaking at the international society of augmentative and alternative communication conference in Toronto, Canada. </p>
@@ -195,8 +195,8 @@
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
 
-        
-          
+
+
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
